[package]
name = "dynmap-wmts"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
handlebars = "6.1.0"
serde = "1.0.213"
dotenv = "0.15.0"
futures-core = "0.3.31"
bytes = "1.8.0"
tokio-util = { version = "0.7.12", features = ["io"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
ordered-float = { version = "4.4.0", features = [ "serde" ] }
